# imu_serial

./: CMakeLists.txt  README.md  package.xml
include/: crc8_crc16.hpp  imu_serial_node.hpp
src/: crc8_crc16.cpp  imu_serial_node.cpp
